--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,13 @@ jobs:
           - "3.2"
           - "3.3.0"
           - "3.3"
+          - "3.4.0"
+          - "3.4"
+          - "4.0.0"
+          - "4.0"
           - ruby-head
           - jruby-9.4
+          - jruby-10.0
     steps:
       - uses: actions/checkout@v4
       - name: Set up Ruby
